--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- badges: end -->
 
-The goal of caretForecast is to ...
+The goal of caretForecast is to provide tools for forecasting time series data using various machine learning algorithms. (More details will follow...)
 
 ## Installation
 
