--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,9 @@ knitr::opts_chunk$set(
 # caretForecast
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/Akai01/caretForecast/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Akai01/caretForecast/actions/workflows/R-CMD-check.yaml)
-[![pkgdown](https://github.com/Akai01/caretForecast/actions/workflows/pkgdown.yaml/badge.svg)](https://github.com/Akai01/caretForecast/actions/workflows/pkgdown.yaml)
-[![Codecov test coverage](https://codecov.io/gh/Akai01/caretForecast/graph/badge.svg)](https://app.codecov.io/gh/Akai01/caretForecast)
+[![R-CMD-check](https://github.com/taf-society/caretForecast/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/taf-society/caretForecast/actions/workflows/R-CMD-check.yaml)
+[![pkgdown](https://github.com/taf-society/caretForecast/actions/workflows/pkgdown.yaml/badge.svg)](https://github.com/taf-society/caretForecast/actions/workflows/pkgdown.yaml)
+[![Codecov test coverage](https://codecov.io/gh/taf-society/caretForecast/graph/badge.svg)](https://app.codecov.io/gh/taf-society/caretForecast)
 [![CRAN status](https://www.r-pkg.org/badges/version/caretForecast)](https://CRAN.R-project.org/package=caretForecast)
 [![CRAN downloads](https://cranlogs.r-pkg.org/badges/grand-total/caretForecast)](https://CRAN.R-project.org/package=caretForecast)
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://lifecycle.r-lib.org/articles/stages.html#maturing)
@@ -50,7 +50,7 @@ The development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("Akai01/caretForecast")
+devtools::install_github("taf-society/caretForecast")
 ```
 ## Example
 
