--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# caretForecast
+# caretForecast 
+
+<img src="man/figures/logo.png" align="center" height="139" alt="caretForecast logo" />
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/taf-society/caretForecast/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/taf-society/caretForecast/actions/workflows/R-CMD-check.yaml)
@@ -35,6 +37,11 @@ caretForecast aspires to equip users with the means of using machine learning al
 - **Horizon-specific conformal prediction intervals** with proper out-of-sample calibration
 - Support for external regressors (promotions, holidays, etc.)
 - Compatible with hierarchical/grouped time series via the hts package
+
+## About TAFS
+
+**TAFS (Time Series Analysis and Forecasting Society)** is a non-profit association ("Verein") in Vienna, Austria. It connects academics, experts, practitioners, and students focused on time-series, forecasting, and decision science. Contributions remain fully open source.
+Learn more at [taf-society.org](https://taf-society.org/).
 
 ## Installation
 
